PLANET-3880-fix fix image gap between minimal header and image on en side style campaign

--- a/assets/scss/components/_enform.scss
+++ b/assets/scss/components/_enform.scss
@@ -476,14 +476,14 @@
 .single-campaign {
   .enform-side-style {
     img {
-      margin-top: 54px;
+      height: 55% !important;
 
       @include medium-and-up {
-        margin-top: 60px;
+        height: 55% !important;
       }
 
       @include large-and-up {
-        margin-top: 0;
+        height: 100% !important;
       }
     }
   }
